# or-lab

./: .gitignore  .pre-commit-config.yaml  Caddyfile  LICENSE  README.md  biljke.csv  demo.env  pyproject.toml  schema.json  test.sh
docs/: biljke-openapi.yaml  swagger-initializer.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: FilterProvider.tsx  ProfileProvider.tsx  Table.module.css  Table.tsx
frontend/src/pages/: About.tsx  Dataset.tsx  Home.tsx  Profile.tsx  Schema.tsx
lab/: auth.py  db.py  models.py  scripts.py  sql.py  utils.py  web.py
lab/template/: index.html
