[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Bernard Crnković <bernard.crnkovic@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.1.0"
cattrs = "^22.2.0"
pre-commit = "^2.20.0"
flask = "^2.2.2"
flask-cors = "^3.0.10"

[tool.poetry.scripts]
lab = "lab.scripts:start"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

# [tool.isort]
# profile = "black"
# line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
